<package>
  <name>robot_controllers_interface</name>
  <version>0.7.1</version>
  <description>
    Generic framework for robot controls.
  </description>

  <author>Michael Ferguson</author>
  <maintainer email="eric.relson@zebra.com">Eric Relson</maintainer>
  <maintainer email="jeffrey.wilson@zebra.com">Jeff Wilson</maintainer>
  <maintainer email="opensource@fetchrobotics.com">Fetch Robotics Open Source Team</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>robot_controllers_msgs</build_depend>
  <build_depend>roscpp</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>robot_controllers_msgs</run_depend>
  <run_depend>roscpp</run_depend>

</package>
